# memoweft

./: .env.example  .gitattributes  .gitignore  .prettierignore  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  CURRENT.md  DECISIONS.md  LICENSE  LOG.md  PROJECT_PLAN.md  README.md  README.zh-CN.md  ROADMAP.md  STATE.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
py/: .gitignore  README.md  pyproject.toml
py/scripts/: smoke_distribution.py
py/src/memoweft/: __init__.py  _jsstr.py  _math.py  _shared.py  asking.py  attribute.py  clock.py  confidence.py  config.py  consolidate.py  decay.py  distill.py  echoed_id.py  evaluation.py  expire.py  formed_by.py  hash_embedder.py  ingest.py  perceive.py  privacy.py  source_label.py  trends.py  types.py  update_profile.py
py/src/memoweft/_shared_data/: config-constants.json  prompts.json
py/src/memoweft/_shared_data/parity/: asking.json  attribute.json  bundle-validate.json  decay.json  (+16 more)
py/src/memoweft/llm/: __init__.py  client.py  json_repair.py  prompts.py
py/src/memoweft/portable/: __init__.py  importer.py  model.py  validate.py
py/src/memoweft/store/: __init__.py  _rows.py  cognition.py  driver.py  event.py  evidence.py  interaction_context.py  keyword.py  schema.py  semantic_resolution.py  transaction.py
py/tests/: conftest.py  test_bundle_interop.py  test_content_type_fallback_metering.py  test_json_repair.py  test_parity_asking.py  test_parity_attribute_trends.py  test_parity_cognition_order.py  test_parity_confidence.py  test_parity_consolidate.py  test_parity_context_hash.py  test_parity_decay.py  test_parity_distill.py  test_parity_echoed_id.py  test_parity_eval_checks.py  test_parity_evidence_auth.py  test_parity_expire.py  test_parity_formed_by.py  test_parity_fts.py  test_parity_hash_embedder.py  test_parity_import.py  test_parity_json_extract.py  test_parity_llm_text.py  test_parity_source_label.py  test_parity_update_profile.py  test_privacy_perceive.py  test_shared_resources.py  test_store_crud.py  test_store_interaction.py  test_transaction.py
(+370 files in other folders)
