[project]
name = "memoweft"
version = "0.6.0.dev0"
description = "MemoWeft — portable AI long-term memory that keeps facts and guesses apart (Python port, 1.3 · D-0042). Parity kernel: pure-logic invariants verified bit-exact against the TypeScript source via ../shared/parity fixtures."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "regex>=2024.0.0", # \p{L}/\p{N}/\p{Han} Unicode property classes for tokenize (stdlib re lacks \p{Script=...})
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "types-regex",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoweft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
