[project]
name = "memoweft"
version = "0.6.0.dev0"
description = "Experimental Python parity implementation for MemoWeft's memory rules, storage, and portable-data contracts."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "regex>=2024.0.0", # \p{L}/\p{N}/\p{Han} Unicode property classes for tokenize (stdlib re lacks \p{Script=...})
    "httpx>=0.27", # OpenAI 兼容端点 HTTP 客户端(同步 httpx.Client;不引 SDK,同 TS 精神)
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "mypy>=1.11",
    "types-regex",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memoweft"]
include = ["src/memoweft/_shared_data/**/*.json"]

[tool.hatch.build.targets.sdist]
exclude = ["/uv.lock"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.11"
typeCheckingMode = "strict"

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
